--- a/web/index/templates/index.html
+++ b/web/index/templates/index.html
@@ -36,10 +36,10 @@
             <tr>
                 {% if file['finished'] %}
                     <td><span class="glyphicon glyphicon-ok"></span></td>
-                    <td><a href="{{ file['url'] }}">{{ file['name'] }}</a></td>
+                    <td><a href="{{ file['url'] }}">{{ file['display_name'] }}</a></td>
                 {% else %}
                     <td><span class="glyphicon glyphicon-download"></span></td>
-                    <td>{{ file['name'] }}<</td>
+                    <td>{{ file['display_name'] }}<</td>
                 {% endif %}
 
                 <td>{{ file['mtime'] }}</td>
@@ -47,14 +47,19 @@
 
                 <form method="post">
                     <td><input type="text" name="new_name" size="10" placeholder="New name"></td>
-                    <td><input type="submit" name="set" value="Set New Name" class="btn btn-success"></td>
-                    <td><input type="submit" name="delete" value="Delete File" class="btn btn-danger"></td>
-                    <input type="hidden" name="file_id" value="'.$file_id.'">
+                    <td><input type="submit" name="submit" value="Set New Name" class="btn btn-success"></td>
+                    <td><input type="submit" name="submit" value="Delete File" class="btn btn-danger"></td>
+                    <input type="hidden" name="file_name" value="{{ file['name'] }}">
                 </form>
             </tr>
         {% endfor %}
     </table>
 </div>
+
+{% if err %}
+    <script>alert("{{ err }}")</script>
+{% endif %}
+
 </body>
 </html>
 
