--- a/web/index/templates/index.html
+++ b/web/index/templates/index.html
@@ -20,8 +20,8 @@
 
 
     <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" data-toggle="tab" href="#list">File List</a>
+        <li class="nav-item active">
+            <a class="nav-link" data-toggle="tab" href="#list">File List</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#downloader">Download</a>
@@ -29,7 +29,7 @@
     </ul>
 
     <div class="tab-content">
-        <div id="list" class="container tab-pane active"><br>
+        <div id="list" class="tab-pane active"><br>
             <h3>Disk Space:</h3>
             <table class="table disk-space">
                 <thead>
@@ -70,7 +70,7 @@
             </table>
         </div>
 
-        <div id="downloader" class="container tab-pane fade"><br>
+        <div id="downloader" class="tab-pane fade"><br>
             <object data="/ariang/index.html" class="ariang"></object>
         </div>
     </div>
